--- a/atom/package.json
+++ b/atom/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json --port 4200 & node index.js",
+    "start": "ng serve --port 4200 & node index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
