--- a/atom/package.json
+++ b/atom/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4200 & node index.js",
+    "start": "ng serve --port 4200",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,16 +21,14 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
     "bootstrap": "^4.4.0",
     "font-awesome": "^4.7.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
