--- a/atom/package.json
+++ b/atom/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run atom:serve-ssr",
+    "serve:ssr": "node dist/atom/server/main.js",
+    "build:ssr": "ng build --prod && ng run atom:server:production",
+    "prerender": "ng run atom:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +23,14 @@
     "@angular/localize": "~9.1.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
+    "@angular/platform-server": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ngrx/effects": "^9.2.1",
     "@ngrx/store": "^9.2.1",
+    "@nguniversal/express-engine": "^9.1.1",
     "bootstrap": "^4.4.0",
+    "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.4",
@@ -35,6 +42,8 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
+    "@nguniversal/builders": "^9.1.1",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
