--- a/atom/package.json
+++ b/atom/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/platform-server": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@angular/service-worker": "~9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ngrx/effects": "^9.2.1",
     "@ngrx/store": "^9.2.1",
@@ -32,6 +33,7 @@
     "bootstrap": "^4.4.0",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "http-server": "^0.12.3",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
